--- a/styly.css
+++ b/styly.css
@@ -9,6 +9,7 @@ body {
 img {
 	box-shadow: 5px 5px 5px black;
 	border-radius: 10px;
+	
 }
 a {
 	text-decoration: none;
@@ -22,4 +23,8 @@ h1 {
 }
 hr {
 	color: white;
+}
+iframe {
+	box-shadow: 5px 5px 5px;
+	border-radius: 10px;
 }
