--- a/styly.css
+++ b/styly.css
@@ -7,7 +7,7 @@ body {
 }
 
 img {
-	box-shadow: 5px 5px 5px;
+	box-shadow: 5px 5px 5px blue;
 	border-radius: 10px;
 	
 }
@@ -25,6 +25,6 @@ hr {
 	color: white;
 }
 iframe {
-	box-shadow: 5px 5px 5px;
+	box-shadow: 5px 5px 5px blue;
 	border-radius: 10px;
 }
