--- a/styly.css
+++ b/styly.css
@@ -3,7 +3,7 @@ body {
 	background: linear-gradient(90deg, rgba(19,183,184,1) 12%, rgba(40,76,215,1) 72%); 
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	color: #000066;
-	text-align: center;
+
 }
 
 img {
@@ -15,11 +15,17 @@ a {
 	text-decoration: none;
 	background-color: rgba(40,76,215,1);
 	color: white;
+	border: rgba(40,76,215,1);
+	border-radius: 5px;
 
 }
 
 h1 {
 	text-align: center;
+	border: 2px solid black;
+	width: 400px;
+	border-radius: 10px;
+	margin: 10px auto;
 }
 hr {
 	color: white;
